minor fix swagger
